[package]
name = "demo_with_stm32f411"
authors = ["eZioPan <eziopan@qq.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "*"
stm32f4xx-hal = { version = "*", features = ["stm32f411"] }

rtt-target = { version = "*" }
panic-rtt-target = { version = "*" }

lcd1602-driver = { path = "../.." }
